--- a/.github/workflows/wf-ci-cd-general.yml
+++ b/.github/workflows/wf-ci-cd-general.yml
@@ -1,6 +1,4 @@
-# .github/workflows/reusable-deploy.yml
-
-name: reusable-deploy
+name: Reusable Deploy Workflow
 
 on:
   workflow_call:
@@ -45,7 +43,7 @@ jobs:
 
       - name: Clone external base chart repo
         run: |
-          git clone https://github.com/my-org/helm-base-chart.git
+          git clone https://github.com/EPIIS/unsaac-devops-templates.git
           cp -r helm-base-chart/_base charts/_base
 
       - name: Install yq
