--- a/.github/workflows/wf-ci-cd-general.yml
+++ b/.github/workflows/wf-ci-cd-general.yml
@@ -56,6 +56,7 @@ jobs:
         run: |
           NAME="${{ inputs.name }}"
           cp -r charts/_base charts/${NAME}
+          echo "Copiado el chart base a charts/${NAME}"
 
       - name: Setear versión de imagen (short SHA)
         run: echo "IMAGE_VERSION=$(echo $GITHUB_SHA | cut -c1-8)" >> $GITHUB_ENV
@@ -69,6 +70,7 @@ jobs:
           IMAGE_VERSION=${{ env.IMAGE_VERSION }}
 
           VALUES_FILE="charts/${NAME}/values.yaml"
+          echo "Modificando el archivo $VALUES_FILE"
 
           yq eval -i -y ".namespace = \"${NAME}\"" "$VALUES_FILE"
           yq eval -i -y ".deployment.name = \"${NAME}-deployment\"" "$VALUES_FILE"
