--- a/.github/workflows/wf-ci-cd-general.yml
+++ b/.github/workflows/wf-ci-cd-general.yml
@@ -49,8 +49,14 @@ jobs:
 
       - name: Install yq
         run: |
-          sudo apt-get update
-          sudo apt-get install -y yq
+          VERSION="v4.43.1"
+          BINARY="yq_linux_amd64"
+          wget https://github.com/mikefarah/yq/releases/download/${VERSION}/${BINARY}.tar.gz -O - | \
+            tar xz
+          mv ${BINARY} /usr/local/bin/yq
+          chmod +x /usr/local/bin/yq
+          yq --version
+
 
       - name: Copy base chart to project chart
         run: |
