--- a/.github/workflows/wf-ci-cd-general.yml
+++ b/.github/workflows/wf-ci-cd-general.yml
@@ -119,11 +119,15 @@ jobs:
           docker save -o ${{ inputs.name }}.tar $REGISTRY/${{ inputs.name }}:${{ env.IMAGE_VERSION }}
 
       - name: Transferir imagen y chart (solo frontend)
+        env:
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         run: |
           sshpass -p "$SSH_PASSWORD" scp -o StrictHostKeyChecking=no ${{ inputs.name }}.tar $SERVER_USER@$SERVER_HOST:$SERVER_PATH/
           sshpass -p "$SSH_PASSWORD" scp -o StrictHostKeyChecking=no -r charts/${{ inputs.name }} $SERVER_USER@$SERVER_HOST:$SERVER_PATH/helm/
 
       - name: Load image on server and push to registry
+        env:
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         run: |
           sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST << EOF
             cd $SERVER_PATH
