--- a/.github/workflows/wf-ci-cd-general.yml
+++ b/.github/workflows/wf-ci-cd-general.yml
@@ -36,7 +36,7 @@ jobs:
       SERVER_USER: ${{inputs.user}}
       REGISTRY: localhost:5000
       SERVER_HOST: 200.48.82.51
-      SERVER_PATH: /home/${SERVER_USER}/devops/pipeline
+      SERVER_PATH: /home/${{inputs.user}}/devops/pipeline
     steps:
       - name: Checkout caller repo
         uses: actions/checkout@v4
